and this project adheres to `Semantic Versioning <http://semver.org/>`_

Unreleased
------------------

Added
~~~~~~~
- If you have objects with missing features, put in NaN values.
- Several classifiers: LDA, QDA, GaussianNB and ComplementNB.
- CASH now also includes multiple machine learning model selection.
- Discrete uniform sampling

Changed
~~~~~~~
- Upgraded imputer to work with newest sklearn versions.
- Oversampling and SMOTE can now also be used in CASH optimization.
- Moved max_iter of all iterative classifiers and regressors to general config.
- Moved classifier construction to fitandscore to enable CASH.

Fixed
~~~~~
- Replaced several print statements to be Python3 compatible.
- SMOTE and Oversampling now only apply to the training set. Was previously
  training plus validation.
- Scipy randint distribution was not compatible with the sklearn
  ParameterSampler, so replaced them by a new discrete uniform distribution.
- Error catch when param_grid in CASH contains invalid values.

2.1.1 - 2019-02-15
------------------

Added
~~~~~~~
- Relief feature selection.
- RankedSVM for multilabel classification.
- Multilabel workflow. All binary classifiers can now also be used
  for multilabel classification true a sklearn OneVsRestClassifier
  object.
- Multilabel performance metrics. Automatically used in plot_SVM
  when using multilabel workflow.
- Full oversampling of underrepresented classes.
- log_uniform and exp_uniform distributions
- Volume now also computed when only providing a Nifti
- Single class Relief feature selection.
- MultiSVR ensembling.
- Start on F1_average metric.


Changed
~~~~~~~
- Reduced memory usage by not passing fitted objects, but just the
 (hyper)parameters.
- All metrics used in evaluation are now combined in a metrics
  script in the classification folder.
- Cleaned crossval function for readability.
- SVM hyperparameters are adjusted.
- GroupSel now has a separate Hyperparameter for all texture groups.