@@ -31,7 +31,7 @@ from PREDICT.featureselection.Relief import SelectMulticlassRelief
 from sklearn.multiclass import OneVsRestClassifier
 from PREDICT.classification.estimators import RankedSVM
 from PREDICT.classification import construct_classifier as cc
-from sklearn.metrics import check_scoring
+from PREDICT.classification.metrics import check_scoring
 from imblearn.over_sampling import SMOTE, RandomOverSampler
 from sklearn.utils import check_random_state
 import random
