@@ -41,7 +41,7 @@ rdflib>=4.2.1
 scikit-image>=0.12.3
 scikit-learn==0.20.2
 scipy>=0.18.1
-SimpleITK>=0.9.1
+SimpleITK==1.1.0
 simplejson>=3.10.0
 six>=1.10.0
 sklearn>=0.0
